[gd_scene load_steps=44 format=3 uid="uid://dk0ky5rvaillf"]

[ext_resource type="Script" uid="uid://mk4r7eofia01" path="res://scripts/Player.gd" id="1_6e537"]
[ext_resource type="PackedScene" uid="uid://0ddb7ihkgi2y" path="res://scenes/base_projectile.tscn" id="2_p07f3"]
[ext_resource type="Script" uid="uid://bt00keo6s1nns" path="res://scripts/WeaponData.gd" id="3_viqgg"]
[ext_resource type="Texture2D" uid="uid://04n2miomx6yr" path="res://Art/Gunner/Gunner.png" id="4_fgkxt"]
[ext_resource type="Texture2D" uid="uid://fmd1fkxhigoh" path="res://Art/Gunner/Walk/GunnerWalk_01.png" id="5_xsi7p"]
[ext_resource type="Texture2D" uid="uid://cw3vs6npx4gfa" path="res://Art/Gunner/Walk/GunnerWalk_02.png" id="6_1jpwa"]
[ext_resource type="Texture2D" uid="uid://8w7tnc1gvqr7" path="res://Art/Gunner/Walk/GunnerWalk_03.png" id="7_pfeki"]
[ext_resource type="Texture2D" uid="uid://dtuebok2xtid" path="res://Art/Gunner/Walk/GunnerWalk_04.png" id="8_axnmu"]
[ext_resource type="Texture2D" uid="uid://bt48gmkkh1nek" path="res://Art/Gunner/Walk/GunnerWalk_05.png" id="9_fvsjc"]
[ext_resource type="Texture2D" uid="uid://34orndkqoh4f" path="res://Art/Gunner/Walk/GunnerWalk_06.png" id="10_hxdpb"]
[ext_resource type="Texture2D" uid="uid://dgdeeql32txpc" path="res://Art/Gunner/Walk/GunnerWalk_07.png" id="11_agngo"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="12_qrixf"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="13_qmt83"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="14_m4as6"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="15_b1r6t"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="16_c0asu"]
[ext_resource type="Script" uid="uid://le5w1cm0ul8p" path="res://addons/godot_state_charts/expression_guard.gd" id="17_fq1a3"]
[ext_resource type="Script" uid="uid://bqcmgr35kqpi0" path="res://scripts/Components/MovementComponent.gd" id="18_gu4mg"]
[ext_resource type="Script" uid="uid://bi6qg4fcb56f2" path="res://scripts/Components/HealthNotifierComponent.gd" id="19_pfeki"]
[ext_resource type="Script" uid="uid://bcjb3mq3rk8ci" path="res://scripts/Components/Animation_Component.gd" id="19_tk6la"]
[ext_resource type="Script" uid="uid://tswkny34ax8g" path="res://scripts/Components/player_components/PlayerRotationComponent.gd" id="20_yrxk4"]
[ext_resource type="Script" uid="uid://dfypmq6lmnrm6" path="res://scripts/Components/FireComponent.gd" id="21_eg1p0"]
[ext_resource type="Script" uid="uid://crust2jfa11jb" path="res://scripts/Components/HealthComponent.gd" id="22_fgkxt"]
[ext_resource type="Texture2D" uid="uid://bh4uvablbyfde" path="res://Art/gui/ProgressBar.png" id="22_x2u8p"]
[ext_resource type="Script" uid="uid://cetrjmyx0wdga" path="res://scripts/Components/HitBoxComponent.gd" id="23_xsi7p"]
[ext_resource type="Texture2D" uid="uid://cv5lgjbqilt3y" path="res://Art/gui/HUD/CHARACTER HUD/Ammo Icon.png" id="24_p07f3"]
[ext_resource type="Script" uid="uid://chslj8kcftwrx" path="res://scripts/gui/PlayerHud.gd" id="24_viqgg"]
[ext_resource type="Script" uid="uid://ddpmgh4jiimyh" path="res://scripts/Components/DeathComponent.gd" id="24_xsi7p"]
[ext_resource type="Script" uid="uid://7eod0irqfeml" path="res://scripts/Components/player_components/InputComponent.gd" id="25_1jpwa"]

[sub_resource type="Resource" id="Resource_7b0ya"]
resource_local_to_scene = true
script = ExtResource("3_viqgg")
fire_rate = 0.1
max_ammo = 10
reload_time = 2.0
projectile_scene = ExtResource("2_p07f3")
current_ammo = 10
fire_mode = 1
metadata/_custom_type_script = "uid://bt00keo6s1nns"

[sub_resource type="SpriteFrames" id="SpriteFrames_ejpd0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_fgkxt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_xsi7p")
}, {
"duration": 1.0,
"texture": ExtResource("6_1jpwa")
}, {
"duration": 1.0,
"texture": ExtResource("7_pfeki")
}, {
"duration": 1.0,
"texture": ExtResource("8_axnmu")
}, {
"duration": 1.0,
"texture": ExtResource("9_fvsjc")
}, {
"duration": 1.0,
"texture": ExtResource("10_hxdpb")
}, {
"duration": 1.0,
"texture": ExtResource("11_agngo")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fdflf"]
radius = 11.0454

[sub_resource type="CircleShape2D" id="CircleShape2D_xsi7p"]
radius = 9.05539

[sub_resource type="Resource" id="Resource_8fgeg"]
script = ExtResource("17_fq1a3")
expression = "stunned == true"
metadata/_custom_type_script = "uid://le5w1cm0ul8p"

[sub_resource type="Resource" id="Resource_yjw4m"]
script = ExtResource("17_fq1a3")
expression = "stunned == false"
metadata/_custom_type_script = "uid://le5w1cm0ul8p"

[sub_resource type="Resource" id="Resource_gnc8n"]
script = ExtResource("17_fq1a3")
expression = "stunned == true"
metadata/_custom_type_script = "uid://le5w1cm0ul8p"

[sub_resource type="Resource" id="Resource_eb730"]
script = ExtResource("17_fq1a3")
expression = "stunned == true"
metadata/_custom_type_script = "uid://le5w1cm0ul8p"

[sub_resource type="Resource" id="Resource_6fdrb"]
script = ExtResource("17_fq1a3")
expression = "stunned == false"
metadata/_custom_type_script = "uid://le5w1cm0ul8p"

[sub_resource type="AtlasTexture" id="AtlasTexture_eb730"]
atlas = ExtResource("22_x2u8p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b0ya"]
atlas = ExtResource("22_x2u8p")
region = Rect2(0, 32, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jpwa"]
bg_color = Color(0.614792, 0.127552, 0.135164, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfeki"]
bg_color = Color(0.197462, 0.515971, 0.132426, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1jpwa"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Visuals:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Player"]]
collision_layer = 128
collision_mask = 129
script = ExtResource("1_6e537")
current_weapon = SubResource("Resource_7b0ya")

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
sprite_frames = SubResource("SpriteFrames_ejpd0")
animation = &"idle"
frame_progress = 0.546509

[node name="Sprite2D" type="Sprite2D" parent="Visuals/AnimatedSprite2D"]
texture = ExtResource("4_fgkxt")

[node name="ProjectileSpawnPoint" type="Node2D" parent="Visuals"]
position = Vector2(-2.00006, 16)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fdflf")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("23_xsi7p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_xsi7p")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("12_qrixf")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("14_m4as6")
initial_state = NodePath("Alive")

[node name="Alive" type="Node" parent="StateChart/Root"]
script = ExtResource("13_qmt83")

[node name="Animation" type="Node" parent="StateChart/Root/Alive"]
script = ExtResource("14_m4as6")
initial_state = NodePath("Normal")

[node name="Normal" type="Node" parent="StateChart/Root/Alive/Animation"]
script = ExtResource("15_b1r6t")

[node name="Transition" type="Node" parent="StateChart/Root/Alive/Animation/Normal"]
script = ExtResource("16_c0asu")
event = &"died"
delay_in_seconds = "0.0"

[node name="Movement" type="Node" parent="StateChart/Root/Alive"]
script = ExtResource("14_m4as6")
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="StateChart/Root/Alive/Movement"]
script = ExtResource("13_qmt83")

[node name="AxisMovement" type="Node" parent="StateChart/Root/Alive/Movement/Move"]
script = ExtResource("14_m4as6")
initial_state = NodePath("Idle")

[node name="Move" type="Node" parent="StateChart/Root/Alive/Movement/Move/AxisMovement"]
script = ExtResource("15_b1r6t")

[node name="To Idle" type="Node" parent="StateChart/Root/Alive/Movement/Move/AxisMovement/Move"]
script = ExtResource("16_c0asu")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="Idle" type="Node" parent="StateChart/Root/Alive/Movement/Move/AxisMovement"]
script = ExtResource("15_b1r6t")

[node name="Transition" type="Node" parent="StateChart/Root/Alive/Movement/Move/AxisMovement/Idle"]
script = ExtResource("16_c0asu")
to = NodePath("../../Move")
event = &"walk"
delay_in_seconds = "0.0"

[node name="RotationMovement" type="Node" parent="StateChart/Root/Alive/Movement/Move"]
script = ExtResource("15_b1r6t")

[node name="To Stunned" type="Node" parent="StateChart/Root/Alive/Movement/Move"]
script = ExtResource("16_c0asu")
to = NodePath("../../Stunned")
guard = SubResource("Resource_8fgeg")
delay_in_seconds = "0.0"

[node name="Stunned" type="Node" parent="StateChart/Root/Alive/Movement"]
script = ExtResource("15_b1r6t")

[node name="To Move" type="Node" parent="StateChart/Root/Alive/Movement/Stunned"]
script = ExtResource("16_c0asu")
to = NodePath("../../Move")
guard = SubResource("Resource_yjw4m")
delay_in_seconds = "0.0"

[node name="Fire" type="Node" parent="StateChart/Root/Alive"]
script = ExtResource("14_m4as6")
initial_state = NodePath("Fire")

[node name="Fire" type="Node" parent="StateChart/Root/Alive/Fire"]
script = ExtResource("15_b1r6t")

[node name="To Reload" type="Node" parent="StateChart/Root/Alive/Fire/Fire"]
script = ExtResource("16_c0asu")
to = NodePath("../../Reload")
event = &"reload"
delay_in_seconds = "0.0"

[node name="Stunned To No Fire" type="Node" parent="StateChart/Root/Alive/Fire/Fire"]
script = ExtResource("16_c0asu")
to = NodePath("../../No Fire")
guard = SubResource("Resource_gnc8n")
delay_in_seconds = "0.0"

[node name="Reload" type="Node" parent="StateChart/Root/Alive/Fire"]
script = ExtResource("15_b1r6t")

[node name="To Fire" type="Node" parent="StateChart/Root/Alive/Fire/Reload"]
script = ExtResource("16_c0asu")
to = NodePath("../../Fire")
event = &"reload_complete"
delay_in_seconds = "0.0"

[node name="Stunned To No Fire" type="Node" parent="StateChart/Root/Alive/Fire/Reload"]
script = ExtResource("16_c0asu")
to = NodePath("../../No Fire")
guard = SubResource("Resource_eb730")
delay_in_seconds = "0.0"

[node name="No Fire" type="Node" parent="StateChart/Root/Alive/Fire"]
script = ExtResource("15_b1r6t")

[node name="To Fire" type="Node" parent="StateChart/Root/Alive/Fire/No Fire"]
script = ExtResource("16_c0asu")
to = NodePath("../../Fire")
guard = SubResource("Resource_6fdrb")
delay_in_seconds = "0.0"

[node name="Transition" type="Node" parent="StateChart/Root/Alive"]
script = ExtResource("16_c0asu")
to = NodePath("../../Death")
event = &"died"
delay_in_seconds = "0.0"

[node name="Death" type="Node" parent="StateChart/Root"]
script = ExtResource("15_b1r6t")

[node name="Components" type="Node" parent="."]

[node name="HealthNotifierComponent" type="Node" parent="Components" node_paths=PackedStringArray("spawn_point", "health_component")]
script = ExtResource("19_pfeki")
spawn_point = NodePath("../..")
health_component = NodePath("../HealthComponent")

[node name="MovementComponent" type="Node" parent="Components" node_paths=PackedStringArray("controller")]
script = ExtResource("18_gu4mg")
walk_speed = 25
run_speed = 100
controller = NodePath("../..")
acceleration = 5.0

[node name="AnimationComponent" type="Node" parent="Components" node_paths=PackedStringArray("player_controller", "animation_player")]
script = ExtResource("19_tk6la")
player_controller = NodePath("../..")
animation_player = NodePath("../../Visuals/AnimatedSprite2D")
min_speed = 25

[node name="RotationComponent" type="Node" parent="Components" node_paths=PackedStringArray("visuals_node")]
script = ExtResource("20_yrxk4")
visuals_node = NodePath("../../Visuals")

[node name="FireComponent" type="Node" parent="Components" node_paths=PackedStringArray("spawn_point")]
script = ExtResource("21_eg1p0")
spawn_point = NodePath("../../Visuals/ProjectileSpawnPoint")

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("22_fgkxt")

[node name="DeathComponent" type="Node" parent="Components" node_paths=PackedStringArray("parent", "animation_player")]
script = ExtResource("24_xsi7p")
parent = NodePath("../..")
animation_player = NodePath("../../Visuals/AnimatedSprite2D")

[node name="InputComponent" type="Node" parent="Components" node_paths=PackedStringArray("fire_component")]
script = ExtResource("25_1jpwa")
fire_component = NodePath("../FireComponent")

[node name="DeathCounter" type="Timer" parent="Components"]
wait_time = 5.0
one_shot = true

[node name="PlayerHud" type="CanvasLayer" parent="." node_paths=PackedStringArray("fire_component", "ammo_label", "reload_progress_bar", "health_bar", "health_component", "health_label")]
script = ExtResource("24_viqgg")
fire_component = NodePath("../Components/FireComponent")
ammo_label = NodePath("HBoxContainer/AmmoLabel")
reload_progress_bar = NodePath("ReloadBar")
health_bar = NodePath("HealthBar")
health_component = NodePath("../Components/HealthComponent")
health_label = NodePath("HealthLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerHud"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="AmmoLabel" type="Label" parent="PlayerHud/HBoxContainer"]
layout_mode = 2
text = "x10"

[node name="TextureRect" type="TextureRect" parent="PlayerHud/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("24_p07f3")
expand_mode = 1

[node name="ReloadBar" type="TextureProgressBar" parent="PlayerHud"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
grow_horizontal = 0
grow_vertical = 0
fill_mode = 5
texture_over = SubResource("AtlasTexture_eb730")
texture_progress = SubResource("AtlasTexture_7b0ya")

[node name="HealthBar" type="ProgressBar" parent="PlayerHud"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -27.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_1jpwa")
theme_override_styles/fill = SubResource("StyleBoxFlat_pfeki")
value = 10.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="PlayerHud"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -27.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1jpwa")

[connection signal="sprint_changed" from="." to="Components/InputComponent" method="set_sprint"]
[connection signal="team_changed" from="." to="HitBox" method="set_team"]
[connection signal="team_changed" from="." to="Components/FireComponent" method="set_team"]
[connection signal="weapon_changed" from="." to="Components/FireComponent" method="set_new_weapon"]
[connection signal="damage_taken" from="HitBox" to="Components/HealthComponent" method="subtract_health"]
[connection signal="state_processing" from="StateChart/Root/Alive/Animation/Normal" to="Components/AnimationComponent" method="on_process"]
[connection signal="state_processing" from="StateChart/Root/Alive/Movement/Move" to="Components/RotationComponent" method="rotate_player"]
[connection signal="state_processing" from="StateChart/Root/Alive/Movement/Move" to="Components/InputComponent" method="check_for_movement"]
[connection signal="state_processing" from="StateChart/Root/Alive/Movement/Stunned" to="Components/MovementComponent" method="stop"]
[connection signal="state_physics_processing" from="StateChart/Root/Alive/Fire/Fire" to="Components/InputComponent" method="check_for_fire"]
[connection signal="state_entered" from="StateChart/Root/Alive/Fire/Reload" to="Components/FireComponent" method="start_reload"]
[connection signal="state_processing" from="StateChart/Root/Alive/Fire/Reload" to="Components/FireComponent" method="reload"]
[connection signal="state_entered" from="StateChart/Root/Death" to="Components/DeathComponent" method="_die"]
[connection signal="movement" from="Components/MovementComponent" to="." method="_on_movement_component_movement"]
[connection signal="no_movement" from="Components/MovementComponent" to="." method="_on_movement_component_no_movement"]
[connection signal="no_weapon" from="Components/FireComponent" to="." method="_on_fire_component_no_weapon"]
[connection signal="out_of_ammo" from="Components/FireComponent" to="." method="_on_fire_component_out_of_ammo"]
[connection signal="reload_complete" from="Components/FireComponent" to="." method="_on_fire_component_reload_complete"]
[connection signal="died" from="Components/HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="Components/HealthComponent" to="PlayerHud" method="_update_health_bar"]
[connection signal="move_direction" from="Components/InputComponent" to="Components/MovementComponent" method="try_move"]
[connection signal="try_fire" from="Components/InputComponent" to="Components/FireComponent" method="try_fire"]
[connection signal="try_sprint" from="Components/InputComponent" to="." method="try_sprint"]
[connection signal="timeout" from="Components/DeathCounter" to="." method="_on_death_counter_timeout"]
